version 1.1-rc0 ..-..-2012 
. [NEW] v2.0 forward ported changes:
            CCParticleSystem: fix for correctly fading out particles with premultiplied and non premultiplied textures and avoiding black halo's
. [NEW] Macros: made CCLOG a bit more verbose
. [NEW] ActionInterval: CCFadeIn and CCFadeOut respect initial opacity of node(issue #828) 
. [NEW] Node: added convenience method setAnchorPointWithoutPositionChange, to change a relative anchor point but not change the position of the node.
. [NEW] Sprite: added useTrimmedFrameForAnchorPoint property. This makes the trimmed frame frame of reference for the anchorpoint and contentSize.
. [NEW] DrawPrimitives: added inPixels versions of each function. 
. [NEW] Menu: 
        added reverseOrder, to reverse order of touch detection (issue #1125) 
        color, opacity changed to readwrite    
        touches still work when UIKit elements lay on top of cocos view  
. [NEW] ActionsTest: added test case for issue #1020, synchronizing of several animations each within a CCRepeatForever
. [NEW] ParticleTest: added test case for issue #893, free non-moving particles in retina mode would still move 
. [FIX] CCAnimation: bug in addFrames that resulted in incorrect delayPerUnit (issue #1341), added assert to prevent 0 duration.
. [FIX] Actions:
        CCAnimate: fixed low FPS bug, where multiple frames need to be set per 'tick'.
        CCActionTween: fixed missing copyWithZone
        CCRepeatForever: has a stop method now (issue #945)
. [FIX] ActionManager: always calls stop on a action that must be removed (issue #945)
. [FIX] Director: exceptions raised in runloop didn't cause program to abort (issue #911)
. [FIX] Node: 
        onEnterTransitionDidFinish isn't called twice anymore, when node was added in onEnter
        touches still work when UIKit elements lay on top of cocos view 
. [FIX] Sprite: CCSprite bug in setDisplayFrameWithAnimationName
. [FIX] ParticleSystem: unschedule update method when deallocated